# wikinator

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  quickstart.py  wiki.py
src/wikinator/: __init__.py  __main__.py  cli.py  config.py  config_default.yaml  converter.py  docxit.py  gdrive.py  htmldoc.py  page.py  utils.py  wiki.py
tests/: doxcit_test.py  smoke_test.py
tests/resources/: Document.docx  TestDocument.docx  bullet-test.docx  test.docx  test2.docx  test3.docx
wikinator-main/: CHANGELOG.md  README.md  pyproject.toml
wikinator-main/src/wikinator/: cli.py  docxit.py  gdrive.py  page.py
wikinator-main/tests/: smoke_test.py
