[project]
name = "wikinator"
version = "0.9.0"
description = "Convert Google docs to markdown"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "confuse",
    "cryptography",
    "dotenv",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "gql[all]",
    "humanize",
    "markdownify>=1.2.2",
    "pillow",
    "pytest",
    "python-docx",
    "typer-slim",
]

[project.urls]
Documentation = "https://github.com/philion/wikinator#readme"
Issues = "https://github.com/philion/wikinator/issues"
Source = "https://github.com/philion/wikinator"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source_pkgs = ["wikinator", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
clw = ["src/wikinator", "*/wikinator/src/wikinator"]
tests = ["tests", "*/wikinator/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

#[tool.hatch]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#packages = ["src/wikinator"]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"


[project.scripts]
wikinator = "wikinator:app"
